# gps_app

./: .eslintrc.js  .gitignore  App.js  LocationTracker.js  README.md  app.json  babel.config.js  backend.py  bookmarklet.js  bookmarlet_custom.js  index.ts  localhost_backend.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
